--- a/views/timereporting/ViewStudentHours.html
+++ b/views/timereporting/ViewStudentHours.html
@@ -1,3 +1,51 @@
 {{extend 'layout.html'}}
+<script>
+var week_id = null;
+
+function show_modal(id){
+	$('#comment-modal').modal('show');
+	week_id = id.toString();
+};
+
+function add_comments_request(){
+	var link = '{{=URL('timereporting', 'add_comments')}}/' + week_id + '/' + $('#comment')['0'].value + '/'  
+	ajax(link, [], ':eval')
+}
+
+</script>
+<style>
+.logos{
+	background-color: transparent !important;
+}
+</style>
+
+<!-- Modal -->
+<div id="comment-modal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Add comment</h4>
+      </div>
+      <div class="modal-body">
+	<form>
+		<div class="form-group">
+		<label for="comment">Comment:</label>
+		<textarea class="form-control" rows="5" id="comment"></textarea>
+		</div>
+      	</form>
+      </div>
+      <div class="modal-footer">
+	      <input type='button' class="btn btn-default"  value= 'Submit' onclick="add_comments_request()", [], ':eval')" data-dismiss="modal"></input>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
 {{=H1(T('Student Hours'))}}
-{{=BEAUTIFY(hours)}}
+{{=LOAD('timereporting','StudentHours.load', ajax=True, target="hourform")}}
